--- a/templates/profile.html
+++ b/templates/profile.html
@@ -121,6 +121,24 @@
   </div>
 </section>
 
+<!-- Pending Posts Section -->
+{% if user.is_authenticated and user.id == profile.id and pending_posts.length != 0%}
+<section id="pending-posts" class="text-center">
+  <div class="row p-3">
+
+  <h2 class='text-green fw-bolder display-6'>
+    <strong class='text-uppercase text-green'> Pending Posts</strong>
+  </h2>
+  {% for post in pending_posts %}
+  <div class="col-lg-3 col-md-6 g-1 mt-3 mb-3 d-flex">
+      {% include "includes/post-snippet.html" %}
+  </div>
+  </div>
+{% endfor %}
+</section>
+
+{% endif%}
+
 <!-- User Posts Section -->
 <section id="user-posts" class="text-center">
   <div class="row p-3">
@@ -140,6 +158,7 @@
               {% include "includes/post-preview.html" %}
           </div>
       {% endfor %}
+
   </div>
   <!-- Pagination controls for user posts -->
   {% if posts_page.has_other_pages %}
