--- a/templates/profile.html
+++ b/templates/profile.html
@@ -122,12 +122,12 @@
 </section>
 
 <!-- Pending Posts Section -->
-{% if user.is_authenticated and user.id == profile.id and pending_posts.length != 0%}
+{% if user.is_authenticated and user.id == profile.id and pending_posts|length != 0 %}
 <section id="pending-posts" class="text-center">
   <div class="row p-3">
 
   <h2 class='text-green fw-bolder display-6'>
-    <strong class='text-uppercase text-green'> Pending Posts</strong>
+    <strong class='text-uppercase text-green'>Pending Posts</strong>
   </h2>
   {% for post in pending_posts %}
   <div class="col-lg-3 col-md-6 g-1 mt-3 mb-3 d-flex">
@@ -147,10 +147,22 @@
     </h2>
 
     {% if posts_page|length == 0 %}
-    <p class="text-capitalize h4 text-white">
-      No Posts
-      <i class="fa-solid fa-face-sad-tear"></i>
-    </p>
+    <div class='text-center text-white'>
+
+      <i class="fa-solid fa-face-sad-tear h1 text-white"></i>
+      <h3 class='text-capitalize'>No Posts</h3>
+
+
+      {% if user.is_authenticated and user.id == profile.id %}
+
+      <p>Add a post to contribute to the community!</p>
+      <a href="{% url 'add-post'  %}" class="btn btn-success">
+        <i class="fa-solid fa-pen-to-square"></i>
+        Add a Post
+      </a> 
+      {% endif %}
+ 
+  </div>
     {% endif %}
 
       {% for post in posts_page %}
@@ -210,10 +222,22 @@
 
    
     {% if favourites_page|length == 0 %}
-    <p class="text-capitalize h4 text-white">
-      No Favourites
-      <i class="fa-solid fa-face-sad-tear"></i>
-    </p>
+    <div class='text-center text-white'>
+
+      <i class="fa-solid fa-face-sad-tear h1 text-white"></i>
+      <h3 class='text-capitalize'>No Favourites</h3>
+
+
+      {% if user.is_authenticated and user.id == profile.id %}
+
+      <p>Mark your favourite articles and always have them here</p>
+      <a href="{% url 'home'  %}" class="btn btn-success">
+        <i class="fa-solid fa-heart"></i>
+        Add Favourites
+      </a> 
+      {% endif %}
+ 
+  </div>
     {% endif %}
 
       {% for post in favourites_page %}
