--- a/templates/code_of_conduct.html
+++ b/templates/code_of_conduct.html
@@ -1,36 +1,80 @@
 {% extends "base.html" %}
-
+<!--  -->
 {% block title %}Code Of Conduct{% endblock %}
-
-{% block content %}
+<!--  -->
+{%block content %}
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-8 offset-md-2 text-center">
-            <h1 class='display-2 fw-bolder'>
-                <strong class='text-uppercase text-green'>
-                    Code of Conduct
-                </strong>
-              </h1>           
-              <ul class="list-group">
-                <li class="list-group-item h4">
-                    <i class="fas fa-check"></i> Be respectful to others.
-                </li>
-                <li class="list-group-item h4">
-                    <i class="fas fa-check"></i> Do not post offensive or harmful content.
-                </li>
-                <li class="list-group-item h4">
-                    <i class="fas fa-check"></i> Avoid using derogatory language.
-                </li>
-                <li class="list-group-item h4">
-                    <i class="fas fa-check"></i> Do not engage in personal attacks.
-                </li>
-                <li class="list-group-item h4">
-                    <i class="fas fa-check"></i> Respect intellectual property rights.
-                </li>
-            </ul>
-        </div>
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <h1 class="display-2 fw-bolder text-center mb-3">
+        <strong class="text-uppercase text-green">Code of Conduct</strong>
+      </h1>
+      <ul class="list-group my-5">
+        <li class="list-group-item d-flex align-items-center">
+          <i class="fas fa-hands-praying me-4 h4 text-green"></i>
+          <div>
+            <h3>Be Respectful</h3>
+            <p>
+              Respect the opinions and contributions of others within the
+              community.
+            </p>
+          </div>
+        </li>
+        <li class="list-group-item d-flex align-items-center">
+          <i class="fa-solid fa-person-harassing me-4 h4 text-warning"></i>
+
+          <div>
+            <h3>Avoid Offensive Content</h3>
+            <p>
+              Do not post content that may be considered offensive or harmful to
+              others.
+            </p>
+          </div>
+        </li>
+        <li class="list-group-item d-flex align-items-center">
+          <i class="fas fa-face-angry me-4 h4 text-danger"></i>
+
+          <div>
+            <h3>Avoid Derogatory Language</h3>
+            <p>
+              Avoid using derogatory or disrespectful language when
+              communicating with others.
+            </p>
+          </div>
+        </li>
+        <li class="list-group-item d-flex align-items-center">
+          <i class="fas fa-face-sad-cry me-4 h4 text-primary"></i>
+
+          <div>
+            <h3>No Personal Attacks</h3>
+            <p>
+              Do not engage in personal attacks or harassment against any
+              community member.
+            </p>
+          </div>
+        </li>
+        <li class="list-group-item d-flex align-items-center">
+          <i class="fas fa-brain me-4 h4" style="color: plum"></i>
+          <div>
+            <h3>Respect Intellectual Property</h3>
+            <p>
+              Respect intellectual property rights and avoid plagiarism or
+              copyright infringement.
+            </p>
+          </div>
+        </li>
+
+        <li class="list-group-item d-flex align-items-center">
+          <i class="fas fa-ban me-4 h4" style="color: darkred"></i>
+          <div>
+            <h3>Account Bans</h3>
+            <p>Non-compliance with the guidelines may result in bans.</p>
+          </div>
+        </li>
+      </ul>
     </div>
+  </div>
 </div>
 
-{% endblock  %}
+{% endblock %}
