--- a/templates/base.html
+++ b/templates/base.html
@@ -246,8 +246,11 @@
               ></a>
           </div>
           <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            <p>
+              <a class='text-decoration-none h4' href="{% url 'code_of_conduct' %}">Code of Conduct<a>
+            </p>
+
             © 2023 Copyright: CoolCoders - For educational purposes
-            <p><a href="{% url 'code_of_conduct' %}">Code of Conduct</a></p>
           </div>
         </footer>
 
